Reading pane line spacing fixes. Also, more readins!

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -928,7 +928,7 @@ article.recent-reading:after {
 
 .recent-reading-excerpt p {
     margin: 0;
-    line-height: 1.0em;
+    line-height: 1.6em;
 }
 
 .sidebar .recent-reading:after {
